hphp/hack/test/typecheck/expression_trees/pipe4.php.exp
ERROR: File "pipe4.php", line 12, characters 47-48:
Invalid argument (Typing[4110])
  File "pipe4.php", line 5, characters 14-16:
  Expected `int`
  File "pipe4.php", line 5, characters 23-72:
  But got `ExprTree<ExampleDsl, string, ExampleInt>`
ERROR: File "pipe4.php", line 14, characters 10-12:
Invalid return type (Typing[4110])
  File "pipe4.php", line 9, characters 57-68:
  Expected `ExampleFloat`
  File "pipe4.php", line 5, characters 62-71:
  But got `ExampleInt`
  File "expr_tree.php", line 38, characters 44-49:
    via this generic `TInfer`
  File "expr_tree.php", line 78, characters 96-101:
    via this generic `TInfer`
  File "expr_tree.php", line 454, characters 73-73:
    via this generic `T`
  File "expr_tree.php", line 74, characters 47-52:
    via this generic `TInfer`
